--- a/src/main/java/dao/jdbc.properties
+++ b/src/main/java/dao/jdbc.properties
@@ -1,7 +1,7 @@
 driver=com.mysql.jdbc.Driver
 url=jdbc:mysql://127.0.0.1:3306/
 username=root
-password=
+password=root
 initialSize=0
 maxActive=20
 maxIdle=20
